<resources>
    <string name="app_name">Building Management</string>
    <string name="get_started_text">Show your\n responsibility\n towards society</string>
    <string name="forgot_password_msg">Don\'t worry! it happens. Please enter the email address associated with your account.</string>
    <string name="on_submit_msg">Check out your mailbox, you will receive an email containing link where you can reset your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation -->
    <string name="nav_home">Tổng quan</string>
    <string name="nav_chart">Biểu đồ</string>
    <string name="nav_payment">Thanh toán</string>
    <string name="nav_settings">Cài đặt</string>

    <!-- Content descriptions -->
    <string name="nav_home_desc">Màn hình tổng quan</string>
    <string name="nav_chart_desc">Xem biểu đồ thống kê</string>
    <string name="nav_payment_desc">Quản lý thanh toán</string>
    <string name="nav_settings_desc">Cài đặt ứng dụng</string>
</resources>